<resources>
    <string name="app_name">Personal Finance</string>
    <string name="btnLogin">LOGIN</string>
    <string name="btnSingUp">SINGUP</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Dépenses</string>
    <string name="menu_slideshow">Revenus</string>
    <string name="menu_solde">Solde</string>
    <string name="menu_cashflow">CashFlow</string>
    <string name="menu_convertisseur">Convertisseur de Devise</string>

</resources>