<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/arrow_right_black"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/arrow_left_black"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_solde"
            android:icon="@drawable/stack_of_money_black"
            android:title="@string/menu_solde" />
        <item
            android:id="@+id/nav_cashFlow"
            android:icon="@drawable/crossed_arrows_black"
            android:title="@string/menu_cashflow" />
        <item
            android:id="@+id/nav_convertisseur"
            android:icon="@drawable/exchange"
            android:title="@string/menu_convertisseur" />
    </group>
</menu>